--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ dj-database-url==0.5.0
 dj-email-url==1.0.1
 Django==3.1.2
 django-cache-url==3.1.2
-django-environs==0.1.1
+django-environ==0.4.5
 environs==8.0.0
 marshmallow==3.8.0
-psycopg2==2.8.6
+psycopg2==2.8.6; platform_system == "Windows"
 psycopg2-binary==2.8.6
 python-dotenv==0.14.0
 pytz==2020.1
