--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==3.1.2
 django-cache-url==3.1.2
 django-environ==0.4.5
 environs==8.0.0
+gunicorn==20.0.4
 heroku==0.1.4
 idna==2.10
 marshmallow==3.8.0
