--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gunicorn==20.0.4
 heroku==0.1.4
 idna==2.10
 marshmallow==3.8.0
+pkg-resources==0.0.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 python-dateutil==1.5
