--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,19 @@ dj-database-url==0.5.0
 dj-email-url==1.0.1
 Django==3.1.2
 django-cache-url==3.1.2
+django-crispy-forms==1.10.0
 django-environ==0.4.5
 environs==8.0.0
+future==0.18.2
 gunicorn==20.0.4
 heroku==0.1.4
 idna==2.10
 marshmallow==3.8.0
+Paperboy==1.0.1
 pkg-resources==0.0.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+-e git+https://github.com/gbozee/django-paystack.git@24df1c9ca209031e0ec940ff8552d45ca6b55421#egg=pypaystack
 python-dateutil==1.5
 python-dotenv==0.14.0
 pytz==2020.1
